--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@babel/register": "^7.25.9",
     "babel-node": "^0.0.1-security",
     "express": "^5.1.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0"
